[gd_scene format=3 uid="uid://cv86tl5n5tafk"]

[ext_resource type="Script" uid="uid://bqiwkeei3are7" path="res://script/enemy_component/chid_component/check_attack_component.gd" id="1_0m6e6"]
[ext_resource type="Script" uid="uid://1jtm0pwuxppv" path="res://script/enemy_component/inside_scene/inside_collision.gd" id="2_yo546"]

[node name="CheckAttackComponent" type="Node2D" unique_id=2136703472]
script = ExtResource("1_0m6e6")

[node name="Area2D" type="Area2D" parent="." unique_id=157919665]
collision_layer = 0
collision_mask = 0
script = ExtResource("2_yo546")

[node name="CheckArea" type="Area2D" parent="." unique_id=119651323]
collision_layer = 0
collision_mask = 32

[node name="Timer" type="Timer" parent="." unique_id=76079776]
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="CheckArea" to="." method="_on_check_area_body_entered"]
[connection signal="body_exited" from="CheckArea" to="." method="_on_check_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
